--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-type-animation": "^3.1.0",
+    "recharts": "^2.7.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
