--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@react-three/drei": "^9.80.2",
+    "@react-three/fiber": "^8.13.6",
     "@sanity/client": "^6.1.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +18,7 @@
     "react-scroll": "^1.8.9",
     "react-type-animation": "^3.1.0",
     "recharts": "^2.7.2",
+    "three": "^0.155.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
