--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^10.13.0",
+    "maath": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-timeago": "^7.2.0",
     "react-type-animation": "^3.1.0",
     "recharts": "^2.7.2",
     "three": "^0.155.0",
